# SpaceShooter

./: SpaceShooter.sln
SpaceShooter/: Actor.cpp  Actor.h  CMakeCache.txt  CMakeLists.txt  EnemyManager.cpp  EnemyManager.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Makefile  Projectile.cpp  Projectile.h  ProjectileManager.cpp  ProjectileManager.h  Ship.cpp  Ship.h  SpaceShooter  SpaceShooter.cpp  SpaceShooter.vcxproj  SpaceShooter.vcxproj.filters  cmake_install.cmake
SpaceShooter/Debug/: vc142.idb
SpaceShooter/Debug/SpaceShooter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SpaceShooter.lastbuildstate
SpaceShooter/glm/: CMakeCache.txt  Makefile  cmake_install.cmake
SpaceShooter/x64/Debug/: SpaceShooter.exe.recipe  SpaceShooter.ilk  vc142.idb
SpaceShooter/x64/Debug/SpaceShooter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SpaceShooter.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
